# NeuroRL-ObstacleAvoidance-v1.0

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  FUNDING.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: environment.yaml  perturbation.yaml  training.yaml
data/raw/: environment_test.csv  experiment_001.csv
docs/: experiment_protocol.md  figures.md  methodology.md  project_overview.md  roadmap.md  statistics.md
lab notebook/: 2026-07-09.md
paper/: consistency_check.md  figure_plan.md  manuscript.tex  supplementary_plan.md
paper/figures/: behavioural_figure_manifest.csv
paper/tables/: table1_descriptive_statistics.csv  table1_descriptive_statistics.tex  table2_assumption_tests.csv  table2_assumption_tests.tex  (+5 more)
scripts/: analyse_all.py  build_latent_dataset.py  compare_conditions.py  evaluate.py  evaluate_experiment2.py  extract_latent_activity.py  inferential_statistics.py  latent_clustering.py  latent_correlation.py  latent_pca.py  latent_trajectory.py  plot_behaviour_summary.py  plot_cumulative_trajectories.py  plot_failure_trajectories.py  plot_kinematics.py  plot_nashed_style_trajectories.py  plot_overlay_trajectories.py  plot_reaching_schematic.py  plot_single_trajectory.py  plot_trajectories.py  plot_velocity.py  plot_velocity_profiles.py  print_trajectories.py  statistics.py  summarize_experiment2.py  train.py
tests/: test_config.py  test_environment.py  test_experiment_config.py  test_logger.py  test_physics.py  test_plotting.py  test_recorder.py  test_reward.py
(+48 files in other folders)
