[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurorl-obstacle-avoidance"
version = "1.0.0"
description = "Reinforcement-learning obstacle avoidance with behavioural and neural population analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "torch",
    "gymnasium",
    "stable-baselines3",
    "opencv-python",
    "tqdm",
    "pyyaml",
    "networkx",
    "plotly",
    "statsmodels",
    "h5py",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]